modification item de confirmation

--- a/restaurant1.html
+++ b/restaurant1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/pagerestaurant.css">
+  <link rel="stylesheet" href="css/restaurant.css">
   <title>la palette du gout - ohmyfood!</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
   
   <header class="header">
     <div class="header__bar">
-   <i class="header__btn fa-solid fa-arrow-left" href="./Accueil.html"></i>
+   <a class="header__btn fa-solid fa-arrow-left" href="accueil.html"></a>
     <h1 class="header__logo">ohmyfood</h1>
     </div>
   </header>
@@ -34,7 +34,7 @@
     <section class="restaurant">
         <h2 class="restaurant__title">La palette du gout</h2>
         <i class="restaurant__icon fa-regular fa-heart"></i>
-    </section>
+    </section> 
     <section class="menu">
       <h2 class="menu__title">Entrées</h2>
         <ol class="cards">
