--- a/restaurant3.html
+++ b/restaurant3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/pagerestaurant.css">
+  <link rel="stylesheet" href="css/restaurant.css">
   <title>la note enchantée - ohmyfood!</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
   
   <header class="header">
     <div class="header__bar">
-   <i class="header__btn fa-solid fa-arrow-left" href="Accueil.html"></i>
+   <i class="header__btn fa-solid fa-arrow-left" href="accueil.html"></i>
     <h1 class="header__logo">ohmyfood</h1>
     </div>
   </header>
