--- a/accueil.html
+++ b/accueil.html
@@ -22,8 +22,10 @@
   
 
 
-  
- 
+
+  <div class="loader">
+    <div class="spinner"></div>
+  </div>
 
   <header class="header">
     <h1 class="header__logo shrikhand-regular " >ohmyfood</h1>
@@ -155,5 +157,6 @@
       </ul>
     </div>
   </footer>
+
 </body>
 </html>
