--- a/restaurant2.html
+++ b/restaurant2.html
@@ -17,7 +17,7 @@
   
   <header class="header">
     <div class="header__bar">
-   <i class="header__btn fa-solid fa-arrow-left" href="accueil.html"></i>
+   <a class="header__btn fa-solid fa-arrow-left" href="accueil.html"></a>
     <h1 class="header__logo">ohmyfood</h1>
     </div>
   </header>
