mise en page, ajout du coeur et item

--- a/restaurant1.html
+++ b/restaurant1.html
@@ -17,7 +17,7 @@
   
   <header class="header">
     <div class="header__bar">
-   <a class="header__btn fa-solid fa-arrow-left" href="accueil.html"></a>
+   <a class="header__btn fa-solid fa-arrow-left" href="index.html"></a>
     <h1 class="header__logo">ohmyfood</h1>
     </div>
   </header>
@@ -33,7 +33,7 @@
     <section class="restaurants">
     <section class="restaurant">
         <h2 class="restaurant__title">La palette du gout</h2>
-        <i class="restaurant__icon fa-regular fa-heart"></i>
+        <i class="restaurant__icon fa-solid fa-heart"></i>
     </section> 
     <section class="menu">
       <h2 class="menu__title">Entrées</h2>
