ajustement mise en page

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
               <div class="card__icon">
                 <i class="icon fa-regular fa-heart"></i>
-               
+              </div>
             </footer>
           </a>
     
