ajout et modif effet coeur

--- a/restaurant4.html
+++ b/restaurant4.html
@@ -31,7 +31,8 @@
     <section class="restaurants">
     <section class="restaurant">
         <h2 class="restaurant__title">A la française</h2>
-        <i class="restaurant__icon fa-regular fa-heart"></i>
+        <i class="restaurant__icon1 fa-regular fa-heart"></i>
+      <i class="restaurant__icon2 fa-solid fa-heart"></i>
     </section>
     <section class="menu">
       <h2 class="menu__title">Entrées</h2>
