--- a/restaurant2.html
+++ b/restaurant2.html
@@ -32,7 +32,8 @@
     <section class="restaurants">
     <section class="restaurant">
         <h2 class="restaurant__title">Le délice des sens</h2>
-        <i class="restaurant__icon fa-sharp fa-regular fa-heart"></i>
+        <i class="restaurant__icon1 fa-regular fa-heart"></i>
+      <i class="restaurant__icon2 fa-solid fa-heart"></i>
     </section>
     <section class="menu">
       <h2 class="menu__title">Entrées</h2>
