modification des dernier détails identation du codeet validayeur w3c ect..

--- a/restaurant1.html
+++ b/restaurant1.html
@@ -17,7 +17,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-
+<!-- Header -->
 <header class="header">
   <div class="header__bar">
     <a class="header__btn fa-solid fa-arrow-left" href="index.html"></a>
@@ -26,9 +26,6 @@
 </header>
 
 <main>
-
-
-
   <section>
     <img class="img" src="assets/images/restaurants/la-palette-du-gout.jpg" alt="Photo d'un plat">
   </section>
@@ -38,10 +35,10 @@
       <i class="restaurant__icon1 fa-regular fa-heart"></i>
       <i class="restaurant__icon2 fa-solid fa-heart"></i>
     </section>
+    <!-- Menu -->
     <section class="menu">
       <h2 class="menu__title">Entrées</h2>
       <ol class="cards">
-
         <li class="num1 card">
           <div class="card__content">
             <h3 class="card__title">Fricassée d'escargots</h3>
@@ -56,7 +53,6 @@
             </div>
           </div>
         </li>
-
         <li class="num2 card">
           <div class="card__content">
             <h3 class="card__title">Foie gras de canard mi-cuit </h3>
@@ -87,8 +83,6 @@
         </li>
       </ol>
     </section>
-
-
     <section class="menu">
       <h2 class="menu__title">Plats</h2>
       <ol class="cards">
@@ -136,8 +130,6 @@
         </li>
       </ol>
     </section>
-
-
     <section class="menu">
       <h2 class="menu__title">Desserts</h2>
       <ol class="cards">
@@ -183,17 +175,13 @@
             </div>
           </div>
         </li>
-
       </ol>
     </section>
     <section class="info">
       <a class="info__btn" href="#">Commander</a>
     </section>
   </section>
-
 </main>
-
-
 <footer class="footer">
   <div class="container">
     <span class="footer__logo">ohmyfood</span>
