correction warning et erreurs w3c

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </header>
 <main>
   <!-- Localisation -->
-  <section class="localisation">
-    <h2><i class="fa-solid fa-location-dot"></i></h2>
+  <div class="localisation">
+    <i class="fa-solid fa-location-dot"></i>
     <input class="localisation__text" placeholder="Paris, Belleville">
-  </section>
+  </div>
   <!-- Information-->
   <section class="info">
     <h2 class="info__title">Réservez le menu qui vous convient</h2>
