--- a/restaurant1.html
+++ b/restaurant1.html
@@ -26,10 +26,10 @@
 </header>
 
 <main>
-  <section>
+  <div>
     <img class="img" src="assets/images/restaurants/la-palette-du-gout.jpg" alt="Photo d'un plat">
-  </section>
-  <section class="restaurants">
+  </div>
+  <div class="restaurants">
     <section class="restaurant">
       <h2 class="restaurant__title">La palette du gout</h2>
       <i class="restaurant__icon1 fa-regular fa-heart"></i>
@@ -177,10 +177,10 @@
         </li>
       </ol>
     </section>
-    <section class="info">
+    <div class="info">
       <a class="info__btn" href="#">Commander</a>
-    </section>
-  </section>
+    </div>
+  </div>
 </main>
 <footer class="footer">
   <div class="container">
