--- a/restaurant4.html
+++ b/restaurant4.html
@@ -25,10 +25,10 @@
   </div>
 </header>
 <main>
-  <section>
+  <div>
     <img class="img" src="assets/images/restaurants/a-la-française.jpg" alt="Photo d'un plat">
-  </section>
-  <section class="restaurants">
+  </div>
+  <div class="restaurants">
     <section class="restaurant">
       <h2 class="restaurant__title">A la française</h2>
       <i class="restaurant__icon1 fa-regular fa-heart"></i>
@@ -176,10 +176,10 @@
         </li>
       </ol>
     </section>
-    <section class="info">
+    <div class="info">
       <a class="info__btn" href="#">Commander</a>
-    </section>
-  </section>
+    </div>
+  </div>
 </main>
 <footer class="footer">
   <div class="container">
