--- a/restaurant2.html
+++ b/restaurant2.html
@@ -69,7 +69,7 @@
         <li class="num3 card">
           <div class="card__content">
             <h3 class="card__title">Poulet roti aux herbres de Provence </h3>
-            <span class="card__subtitle">et sa crème de truffe</span>
+            <span class="card__subtitle">Et sa crème de truffe</span>
           </div>
           <div class="card__price">
             <span>40€</span>
@@ -85,7 +85,7 @@
     <section class="menu">
       <h2 class="menu__title">Plats</h2>
       <ol class="cards">
-        <li class="num1 card">
+        <li class="num4 card">
           <div class="card__content">
             <h3 class="card__title">Poulet roti aux herbes de Provence</h3>
             <span class="card__subtitle">Et sa crème de truffe</span>
@@ -99,7 +99,7 @@
             </div>
           </div>
         </li>
-        <li class="num2 card">
+        <li class="num5 card">
           <div class="card__content">
             <h3 class="card__title">Langouste rotie</h3>
             <span class="card__subtitle"> Et ses légumes de saison</span>
@@ -113,7 +113,7 @@
             </div>
           </div>
         </li>
-        <li class="num3 card">
+        <li class="num6 card">
           <div class="card__content">
             <h3 class="card__title">cote de boeuf Angus</h3>
             <span class="card__subtitle">Et sa purée de panais</span>
@@ -132,10 +132,10 @@
     <section class="menu">
       <h2 class="menu__title">Desserts</h2>
       <ol class="cards">
-        <li class="num1 card">
+        <li class="num7 card">
           <div class="card__content">
             <h3 class="card__title">Farandole de desserts</h3>
-            <span class="card__subtitle">du chef</span>
+            <span class="card__subtitle">Du chef</span>
           </div>
           <div class="card__price">
             <span>18€</span>
@@ -146,7 +146,7 @@
             </div>
           </div>
         </li>
-        <li class="num2 card">
+        <li class="num8 card">
           <div class="card__content">
             <h3 class="card__title">Crème brulée</h3>
             <span class="card__subtitle">Revisitée</span>
@@ -160,7 +160,7 @@
             </div>
           </div>
         </li>
-        <li class="num3 card">
+        <li class="num9 card">
           <div class="card__content">
             <h3 class="card__title">Tiramisu</h3>
             <span class="card__subtitle">A la noisette</span>
