--- a/restaurant3.html
+++ b/restaurant3.html
@@ -55,7 +55,7 @@
         <li class="num2 card">
           <div class="card__content">
             <h3 class="card__title">Caviar osciètre</h3>
-            <span class="card__subtitle">sur blini à la farine de blé noir</span>
+            <span class="card__subtitle">Sur blini à la farine de blé noir</span>
           </div>
           <div class="card__price">
             <span>35€</span>
@@ -85,7 +85,7 @@
     <section class="menu">
       <h2 class="menu__title">Plats</h2>
       <ol class="cards">
-        <li class="num1 card">
+        <li class="num4 card">
           <div class="card__content">
             <h3 class="card__title">Noix de coquilles Saint-Jacques</h3>
             <span class="card__subtitle">Sur lit de purée de céleri-rave</span>
@@ -99,7 +99,7 @@
             </div>
           </div>
         </li>
-        <li class="num2 card">
+        <li class="num5 card">
           <div class="card__content">
             <h3 class="card__title">Langoustine poelée</h3>
             <span class="card__subtitle">Purée de patate douce</span>
@@ -113,7 +113,7 @@
             </div>
           </div>
         </li>
-        <li class="num3 card">
+        <li class="num6 card">
           <div class="card__content">
             <h3 class="card__title">Mijoté de queue de boeuf</h3>
             <span class="card__subtitle">Et riz sauvage aux zestes de citron</span>
@@ -132,7 +132,7 @@
     <section class="menu">
       <h2 class="menu__title">Desserts</h2>
       <ol class="cards">
-        <li class="num1 card">
+        <li class="num7 card">
           <div class="card__content">
             <h3 class="card__title">Macaron noisette et chocolat</h3>
             <span class="card__subtitle">Glace au caramel brun et sel de Guérande</span>
@@ -146,7 +146,7 @@
             </div>
           </div>
         </li>
-        <li class="num2 card">
+        <li class="num8 card">
           <div class="card__content">
             <h3 class="card__title">Baba au rhum revisité</h3>
             <span class="card__subtitle">Avec son coulis de citron</span>
@@ -160,7 +160,7 @@
             </div>
           </div>
         </li>
-        <li class="num3 card">
+        <li class="num9 card">
           <div class="card__content">
             <h3 class="card__title">Tarte au citron meringuée</h3>
             <span class="card__subtitle">Déstructurée</span>
